--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   </header>
   <main class="main-wrapper">
     <section>
-      <p id="topSectionForAddingElementToList"></p>
-      <label class="heading" for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
-      </div>
+      <article>
+        <p id="topSectionForAddingElementToList"></p>
+        <label class="heading" for="new-task">Add Item</label>
+        <div class="task-row-wrapper">
+          <input id="new-task"class="task" type="text">
+          <button>Add</button>
+        </div>
+      </article>
     </section>
     <section>
       <article>
