--- a/index.html
+++ b/index.html
@@ -15,28 +15,27 @@
   <main class="main-wrapper">
     <section>
       <article>
-        <p id="topSectionForAddingElementToList"></p>
-        <label class="heading" for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
-        </div>
+        <h3 class="heading">Add Item</h3>
+        <form class="task-row-wrapper" id="add-form">
+          <input id="new-task" class="task" type="text" aria-label="Add item" placeholder="Add item">
+          <button type="submit">Add</button>
+        </form>
       </article>
     </section>
     <section>
       <article>
         <h3 class="heading">Todo</h3>
-        <ul id="incompleteTasks">
+        <ul id="incomplete-tasks" class="task-list">
           <li>
-            <input type="checkbox">
+            <input type="checkbox" aria-label="Checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="image of removal icon">
             </button>
           </li>
-          <li class="editMode">
+          <li class="task-list__item--editable">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
@@ -56,7 +55,7 @@
               <input type="text" class="task">
               <button class="edit">Edit</button>
               <button class="delete">
-                <img src="./remove.svg">
+                <img src="./remove.svg" alt="image of removal icon">
               </button>
               </li>
           </ul>
