--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="image of eisenhower matrix">
     <a class="header__subtitle" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main-wrapper">
@@ -41,7 +41,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="image of removal icon">
             </button>
           </li>
         </ul>
