--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen">
   <title>Todo App</title>
 </head>
 <body>
@@ -29,16 +29,16 @@
           <li>
             <input type="checkbox" aria-label="Checkbox">
             <label class="task">Pay Bills</label>
-            <input type="text" class="task">
+            <input type="text" class="task" aria-label="Task">
             <button class="edit">Edit</button>
             <button class="delete">
               <img src="./remove.svg" alt="image of removal icon">
             </button>
           </li>
           <li class="task-list__item--editable">
-            <input type="checkbox">
+            <input type="checkbox" aria-label="Checkbox">
             <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
+            <input type="text" value="Go Shopping" class="task" aria-label="Task">
             <button class="edit">Save</button>
             <button class="delete">
               <img src="./remove.svg" alt="image of removal icon">
@@ -50,9 +50,9 @@
         <h3 class="heading">Completed</h3>
         <ul id="completed-tasks">
             <li>
-              <input type="checkbox" checked>
+              <input type="checkbox" checked aria-label="Checkbox">
               <label class="task">See the Doctor</label>
-              <input type="text" class="task">
+              <input type="text" class="task" aria-label="Task">
               <button class="edit">Edit</button>
               <button class="delete">
                 <img src="./remove.svg" alt="image of removal icon">
