--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="image of eisenhower matrix">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="image of eisenhower matrix">
     <a class="header__subtitle" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main-wrapper">
