--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section>
       <article>
         <h3 class="heading">Add Item</h3>
-        <form class="task-row-wrapper" id="add-form">
-          <input id="new-task" class="task" type="text" aria-label="Add item" placeholder="Add item">
+        <form class="task-input" id="add-form">
+          <input id="new-task" class="task-input__field" type="text" aria-label="Add item" placeholder="Add item">
           <button type="submit">Add</button>
         </form>
       </article>
