--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <article>
         <h3 class="heading">Add Item</h3>
         <form class="task-input" id="add-form">
-          <input id="new-task" class="task-input__field" type="text" aria-label="Add item" placeholder="Add item">
+          <input class="task-input__field" id="new-task" type="text" aria-label="Add item" placeholder="Add item">
           <button type="submit">Add</button>
         </form>
       </article>
@@ -25,11 +25,11 @@
     <section>
       <article>
         <h3 class="heading">Todo</h3>
-        <ul id="incomplete-tasks" class="task-list">
+        <ul class="task-list" id="incomplete-tasks">
           <li>
             <input type="checkbox" aria-label="Checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task" aria-label="Task">
+            <label class="task-list__text">Pay Bills</label>
+            <input class="task-list__input" type="text" aria-label="Task">
             <button class="edit">Edit</button>
             <button class="delete">
               <img src="./remove.svg" alt="image of removal icon">
@@ -37,7 +37,7 @@
           </li>
           <li class="task-list__item--editable">
             <input type="checkbox" aria-label="Checkbox">
-            <label class="task">Go Shopping</label>
+            <label class="task-list__text">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task" aria-label="Task">
             <button class="edit">Save</button>
             <button class="delete">
