--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
       <article>
         <h3 class="heading">Todo</h3>
         <ul class="task-list" id="incomplete-tasks">
-          <li>
-            <input type="checkbox" aria-label="Checkbox">
+          <li class="task-list__item">
+            <input class="task-list__checkbox" type="checkbox" aria-label="Checkbox">
             <label class="task-list__text">Pay Bills</label>
             <input class="task-list__input" type="text" aria-label="Task">
             <button data-btn-type="edit">Edit</button>
-            <button data-btn-type="delete">
-              <img src="./remove.svg" alt="image of removal icon">
+            <button class="remove-btn" data-btn-type="delete">
+              <img class="remove-btn__img" src="./remove.svg" alt="image of removal icon">
             </button>
           </li>
-          <li class="task-list__item--editable">
-            <input type="checkbox" aria-label="Checkbox">
+          <li class="task-list__item task-list__item--editable">
+            <input class="task-list__checkbox" type="checkbox" aria-label="Checkbox">
             <label class="task-list__text task-list__text--editable">Go Shopping</label>
             <input class="task-list__input task-list__input--editable" type="text" value="Go Shopping" aria-label="Task">
             <button data-btn-type="edit">Save</button>
-            <button data-btn-type="delete">
-              <img src="./remove.svg" alt="image of removal icon">
+            <button class="remove-btn" data-btn-type="delete">
+              <img class="remove-btn__img" src="./remove.svg" alt="image of removal icon">
             </button>
           </li>
         </ul>
@@ -49,13 +49,13 @@
       <article>
         <h3 class="heading">Completed</h3>
         <ul class="task-list" id="completed-tasks">
-            <li>
-              <input type="checkbox" checked aria-label="Checkbox">
-              <label class="task-list__text">See the Doctor</label>
+            <li class="task-list__item">
+              <input class="task-list__checkbox" type="checkbox" checked aria-label="Checkbox">
+              <label class="task-list__text task-list__text--done">See the Doctor</label>
               <input class="task-list__input" type="text" aria-label="Task">
               <button data-btn-type="edit">Edit</button>
-              <button data-btn-type="delete">
-                <img src="./remove.svg" alt="image of removal icon">
+              <button class="remove-btn" data-btn-type="delete">
+                <img class="remove-btn__img" src="./remove.svg" alt="image of removal icon">
               </button>
               </li>
           </ul>
